<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    
    <TextView
        android:id="@+id/display_title_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_title_title"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:layout_below="@id/catagory_spinner"
        android:textSize="15dp" />
    
    <TextView
        android:id="@+id/display_title_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="#303030"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:layout_below="@id/display_title_title" />
    
    <TextView
        android:id="@+id/display_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_description_title"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:layout_below="@id/display_title_value"
        android:textSize="15dp" />
    
    <TextView
        android:id="@+id/display_description_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:padding="5dp"
        android:background="#303030"
        android:textColor="@android:color/white"
        android:layout_below="@id/display_description_title" />
    
    <Button
        android:id="@+id/back_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:text="@string/back"
        android:onClick="done"/>

</RelativeLayout>